--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -313,9 +313,11 @@
    "source": [
     "Independent of the choice between the two datasets above, we plan to place priors on each of the six problems' score distribution to reflect the difficulty of the problem. Also, to reduce the prior sensitivity, we may consider adding a hierarchical structure by conditioning the parameters of these priors to fixed distributions.\n",
     "\n",
-    "In the case of the first dataset, we are interested in a regression problem. Thus, we would apply the structure of a Bayesian GLM to this problem. For example, we might use a discrete uniform likelihood since the number of a certain medal a country receives is an integer between zero and six.\n",
+    "In the case of the first dataset, we are interested in a regression problem. Thus, we would apply the structure of a Bayesian GLM to this problem. For example, we might use a Categorical likelihood and maps from $(p_1, \\ldots, p_6)$ to each probability parameter, where $p_i$ is the score in problem $i$, since the number of a certain medal a country receives is an integer between zero and six.\n",
     "\n",
-    "In the case of the second dataset, since we would be dealing with a classification problem, we would consider Bayesian classifiers, such as Bayesian logistic regression."
+    "In the case of the second dataset, since we would be dealing with a classification problem, we would consider Bayesian classifiers, such as Bayesian logistic regression.\n",
+    "\n",
+    "In both cases, we might compute the posterior using SNIS or MCMC, and compute the Effective Sample Size (ESS) to evaluate the quality of our model."
    ]
   }
  ],
