--- a/report.Rmd
+++ b/report.Rmd
@@ -8,35 +8,6 @@ suppressPackageStartupMessages(suppressWarnings(library(repr)))
 suppressPackageStartupMessages(suppressWarnings(library(tidyverse)))
 ```
 
-Need to filter out rows where any of the questions has grade greater than 7 (filter for data after and including 1979).
-Need to filter out award values that are neither of gold, silver, bronze, honourbale mention, or NA (no award).
-
-```{r}
-url <- 'https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2024/2024-09-24/individual_results_df.csv'
-individual_results_df <- read_csv(url, col_types=cols(p7=col_double())) |>
-    select(-p7, -total, -individual_rank)
-
-# head(individual_results_df)
-# nrow(individual_results_df)
-# unique(individual_results_df$award)
-# filter(individual_results_df, award == "Special prize")
-individual_results_tidy <- individual_results_df |>
-  filter(year >= 1979) |>
-  filter(!if_any(p1:p6, is.na)) |>
-  filter(award == "Gold medal" | award == "Silver medal" |
-         award == "Bronze medal" | award == "Honourable mention" |
-         is.na(award))
-```
-
-```{r}
-nrow(individual_results_tidy)
-unique(individual_results_tidy$award)
-```
-```{r}
-ggplot(individual_results_tidy, aes(x = p1)) +
-  geom_histogram(binwidth = 1) +
-  scale_x_continuous(breaks = 0:7)
-```
 ```{r}
 url <- 'https://raw.githubusercontent.com/rfordatascience/tidytuesday/main/data/2024/2024-09-24/country_results_df.csv'
 country_results_df <- read_csv(url, col_types=cols(p7=col_double())) |> 
@@ -79,7 +50,8 @@ brazil_results
 ```
 ```{r}
 ggplot(data = brazil_results, aes(x = year, y = total_awards)) +
-  geom_point()
+  geom_point() +
+  theme_minimal()
 ```
 ```{r}
 suppressPackageStartupMessages(require(rstan))
@@ -115,7 +87,7 @@ for (i in 2:nrow(brazil_results)) {
       y = ys
   )
   
-  fit = sampling(
+  fit_cv = sampling(
     brazil_simple_predict,
     data = train_test_data,
     chains = 1,
@@ -124,8 +96,8 @@ for (i in 2:nrow(brazil_results)) {
     seed = 123
   )
   
-  y_pred_samples = extract(fit, pars="y_predict")$y_predict
-  limits = unname(quantile(y_pred_samples, probs = c(0.1, 0.9)))
+  y_pred_samples = extract(fit_cv, pars="y_predict")$y_predict
+  limits = unname(quantile(y_pred_samples, probs = c(0.025, 0.975))) #95%
   
   ci_limits <- rbind(ci_limits, data.frame(lower = limits[1], upper = limits[2]))
 }
@@ -144,24 +116,6 @@ merged_df[-1, ] %>%
   labs(x = "Year", y = "Total Awards")
 ```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ```{r}
 suppressPackageStartupMessages(require(bayesplot))
 ```
@@ -174,10 +128,36 @@ mcmc_trace(fit, pars = c("intercept")) + theme_minimal()
 mcmc_rank_hist(fit, pars = c("intercept")) + theme_minimal()
 ```
 
+```{r}
+samples = extract(fit)
+samples_df = as.data.frame(samples)
+```
 
-
-
-
+```{r}
+ggplot(samples_df, aes(x = slope)) +
+  geom_histogram(binwidth = 0.1, fill = "steelblue", color = "black") +
+  labs(x = "Slope", y = "Frequency") +
+  theme_minimal()
+```
+```{r}
+ggplot(samples_df, aes(x = intercept)) +
+  geom_histogram(binwidth = 0.05, fill = "steelblue", color = "black") +
+  labs(x = "Intercept", y = "Frequency") +
+  theme_minimal()
+```
+```{r}
+ggplot(data = samples_df, aes(x = slope, y = intercept)) +
+  geom_point(color = "steelblue", alpha = 0.25) +
+  labs(x = "Slope", y = "Intercept") +
+  theme_minimal()
+```
+```{r}
+ppc_bars(brazil_results$total_awards, samples$y_rep[1:50, ])
+```
+```{r}
+ppc_rootogram(brazil_results$total_awards, samples$y_rep[1:50, ], prob = 0.8)
+```
+Underpredicting: 1, 6; Overpredicting: 4
 
 
 
